--- a/package.json
+++ b/package.json
@@ -19,11 +19,44 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
+    "webpack": "5.63.0",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "3.11.3",
+    "webpack-merge": "5.8.0",
+    "mini-css-extract-plugin": "1.6.2",
+    "postcss": "8.3.11",
+    "postcss-loader": "5.3.0",
+    "postcss-preset-env": "6.7.0",
+    "css-loader": "5.2.7",
+    "css-minimizer-webpack-plugin": "2.0.0",
+    "clean-webpack-plugin": "4.0.0",
+    "copy-webpack-plugin": "8.1.1",
+    "cross-env": "7.0.3",
+    "ts-loader": "^9.4.2",
+    "terser-webpack-plugin": "^5.3.6",
+    "autoprefixer": "10.4.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack serve --config config/webpack.dev.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+    "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc",
+    "webpack_build": "npx webpack --config config/webpack.dev.js"
   },
   "eslintConfig": {
     "extends": [
