--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "scripts": {
     "start": "webpack serve --config config/webpack.dev.js",
-    "build": "react-scripts build",
+    "build": "webpack --config config/webpack.dev.js --progress",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
