--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "build": "webpack --config config/webpack.prod.js --progress",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "typeCheck": "tsc --noEmit --skipLibCheck",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
     "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc",
