--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@consta/charts": "^0.7.1",
-    "@consta/uikit": "^4.13.0",
     "@consta/stats": "^1.1.0",
+    "@consta/uikit": "^4.13.0",
     "@consta/widgets": "^4.3.1",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +15,8 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "ag-grid-community": "^29.3.2",
+    "ag-grid-react": "^29.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
