--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@consta/ag-grid-adapter": "1.0.3",
     "@consta/charts": "0.7.1",
     "@consta/stats": "1.1.0",
     "@consta/uikit": "4.13.0",
@@ -16,6 +17,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "ag-grid-community": "29.3.5",
+    "ag-grid-enterprise": "29.3.5",
     "ag-grid-react": "29.3.5",
     "generate-react-cli": "8.3.0",
     "react": "18.2.0",
