--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,14 @@
       "dom.iterable",
       "esnext"
     ],
-    "plugins": [{ "name": "typescript-plugin-css-modules" }],
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules",
+        "options": {
+          "customMatcher": "\\.css$"
+        }
+      }
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
