--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-uuid": "2.0.0",
     "typescript": "4.9.5",
+    "typescript-plugin-css-modules": "5.0.1",
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
