--- a/package.json
+++ b/package.json
@@ -22,17 +22,25 @@
     "ag-grid-enterprise": "29.3.5",
     "ag-grid-react": "29.3.5",
     "generate-react-cli": "8.3.0",
+    "html-webpack-plugin": "^5.6.0",
     "rc-tree": "5.7.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
-    "react-scripts": "5.0.1",
     "react-uuid": "2.0.0",
-    "typescript": "4.9.5",
+    "typescript": "5.4.2",
     "typescript-plugin-css-modules": "5.0.1",
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-import": "^1.13.8",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "5.31.0",
     "autoprefixer": "10.4.0",
@@ -54,19 +62,19 @@
     "postcss-loader": "5.3.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "2.7.1",
+    "react-refresh": "0.14.0",
+    "style-loader": "3.3.4",
     "terser-webpack-plugin": "5.3.6",
     "ts-loader": "9.4.2",
-    "webpack": "5.63.0",
-    "webpack-bundle-analyzer": "4.5.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "3.11.3",
-    "webpack-merge": "5.8.0"
+    "webpack": "5.89.0",
+    "webpack-bundle-analyzer": "4.10.1",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1",
+    "webpack-merge": "5.10.0"
   },
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js",
+    "start": "webpack serve --config config/webpack.dev.js --progress",
     "build": "webpack --config config/webpack.prod.js --progress",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "typeCheck": "tsc --noEmit --skipLibCheck",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
     "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
