--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "@consta/uikit": "4.13.0",
     "@consta/widgets": "4.3.1",
     "@reduxjs/toolkit": "1.9.2",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.5.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.5.0",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "jest-fetch-mock": "^3.0.3",
     "@types/node": "16.18.12",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "ag-grid-community": "29.3.5",
     "ag-grid-enterprise": "29.3.5",
     "ag-grid-react": "29.3.5",
-    "generate-react-cli": "8.3.0",
+    "generate-react-cli": "8.4.1",
     "html-webpack-plugin": "^5.6.0",
     "rc-tree": "5.7.6",
     "react": "18.2.0",
@@ -38,34 +42,44 @@
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "babel-jest": "^29.6.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "autoprefixer": "10.4.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-import": "^1.13.8",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "@typescript-eslint/eslint-plugin": "5.31.0",
-    "@typescript-eslint/parser": "5.31.0",
-    "autoprefixer": "10.4.0",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "8.1.1",
     "cross-env": "7.0.3",
-    "css-loader": "5.2.7",
+    "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "2.0.0",
-    "eslint": "8.20.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "3.3.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.30.1",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "@conarti/eslint-plugin-feature-sliced": "^1.0.5",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.27.2",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks-configurable": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "gh-pages": "5.0.0",
     "mini-css-extract-plugin": "1.6.2",
-    "postcss": "8.3.11",
     "postcss-loader": "5.3.0",
-    "postcss-preset-env": "6.7.0",
-    "prettier": "2.7.1",
+    "postcss-preset-env": "9.5.1",
+    "prettier": "^3.2.5",
     "react-refresh": "0.14.0",
     "style-loader": "3.3.4",
+    "stylelint": "^16.2.1",
+    "stylelint-config-clean-order": "^5.4.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-prettier": "^5.0.0",
     "terser-webpack-plugin": "5.3.6",
     "ts-loader": "9.4.2",
+    "ts-jest": "^29.1.1",
     "webpack": "5.89.0",
     "webpack-bundle-analyzer": "4.10.1",
     "webpack-cli": "5.1.4",
