--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "noUncheckedIndexedAccess": false,
     "lib": [
       "es2017",
-      "dom"
+      "dom",
+      "ES2021.String"
     ],
     "rootDir": ".",
     "plugins": [
