--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@consta/ag-grid-adapter": "1.0.3",
+    "@bem-react/classname": "1.6.0",
     "@consta/charts": "0.7.1",
-    "@consta/icons": "0.5.2",
-    "@consta/rc-tree-adapter": "2.0.2",
-    "@consta/stats": "1.1.0",
-    "@consta/uikit": "4.13.0",
+    "@consta/icons": "1.0.1",
+    "@consta/rc-tree-adapter": "3.0.0",
+    "@consta/stats": "2.0.0",
+    "@consta/uikit": "5.1.0",
     "@consta/widgets": "4.3.1",
     "@reduxjs/toolkit": "1.9.2",
     "@testing-library/jest-dom": "^6.4.2",
@@ -27,7 +27,7 @@
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
-    "rc-tree": "5.7.6",
+    "rc-tree": "5.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
