--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.6.2",
     "jest-fetch-mock": "^3.0.3",
+    "json-beautify": "1.1.1",
     "rc-tree": "5.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
