--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "16.18.12",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "echarts": "5.5.1",
     "generate-react-cli": "8.4.1",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.5.0",
