--- a/.eslintrc
+++ b/.eslintrc
@@ -182,6 +182,7 @@
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/prefer-regexp-exec": "warn",
+    "@typescript-eslint/restrict-template-expressions": "off",
     "@typescript-eslint/require-array-sort-compare": "warn",
     "@typescript-eslint/switch-exhaustiveness-check": "warn",
     "react-hooks-configurable/exhaustive-deps": [
